snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.sha1
49a86d11dccc799f9fb8d80ed861c0597c60ab78